# LLM

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  DECISIONS.md  Makefile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: config.py  db.py  main.py  models.py  pipeline.py  runtime_settings.py  schemas.py  users.py
apps/api/app/api/: deps.py  routes.py
apps/api/app/exporters/: obsidian_git.py
apps/api/app/parsers/: pdf_parser.py
apps/api/app/prompts/: extraction.md  quiz.md  synthesis.md
apps/api/app/scripts/: __init__.py  smoke_curriculum.py  (+2 more)
apps/api/migrations/: env.py  script.py.mako
apps/api/tests/: test_annotation.py  test_auth.py  test_concepts.py  test_cors_on_errors.py  test_embeddings.py  test_export_service.py  test_extraction.py  test_grounding_export_synthesis.py  test_job_events.py  test_jobs_index.py  test_learning_progress.py  test_llm_provider.py  test_page_grounding.py  test_pdf_support.py  test_quiz_generation.py  test_ready_migration_status.py  test_relationships_and_api_contracts.py  test_review_fsrs.py  test_runtime_settings.py  test_smoke_curriculum.py  test_sources_and_ranking.py  test_synthesis_relationships.py  test_synthesis_reliability.py  test_topic_fastfail_and_cleanup.py  test_topic_guard.py  test_uploads.py
tools/curriculum_tools/: pyproject.toml
tools/curriculum_tools/curriculum_tools/: __init__.py  cli.py  compile.py  contracts.py  hashing.py  semver.py
tools/curriculum_tools/tests/: conftest.py  test_semver.py  test_validation.py
(+165 files in other folders)
