[project]
name = "fieldmap-api"
version = "0.1.0"
description = "FieldMap backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlmodel>=0.0.22",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "fastembed>=0.3",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "tenacity>=8.5",
  "redis>=5.0",
  "rq>=1.16",
  "pymupdf4llm>=0.0.17",
  "feedparser>=6.0",
  "GitPython>=3.1",
  "python-slugify>=8.0",
  "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
# Generated Alembic revisions are machine-written; don't lint them.
extend-exclude = ["migrations/versions"]
